# redis-haskell

./: .gitignore  LICENSE  Makefile  README.md  redis-haskell.cabal
src/Database/: Redis.hs
src/Database/Redis/: Command.hs  Core.hs  Internal.hs
testsuite/: Makefile
testsuite/benchmarks/: Performance.hs
testsuite/tests/Test/: Tests.hs  Util.hs
testsuite/tests/Test/Database/Redis/: CommandTests.hs
